# cascette-rs

./: .gitignore  .mise.toml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  TODO.md  deny.toml  install.ps1  install.sh  mise.toml  rust-toolchain.toml
blte/: CHANGELOG.md  Cargo.toml  README.md
blte/examples/: README.md  adaptive_compression.rs  analyze_concatenated_blte.rs  analyze_large_blte.rs  extract.rs  investigate_blte_formats.rs  perfect_round_trip_recreation.rs  real_blte_roundtrip.rs  streaming_decompress.rs  test_archive_parsing.rs  test_compress.rs  test_compression_detection.rs  test_encryption.rs  test_first_blte.rs  test_large_blte.rs  test_wow_archives.rs
blte/src/: adaptive.rs  builder.rs  chunk.rs  compress.rs  decompress.rs  error.rs  header.rs  lib.rs  memory_pool.rs  read.rs  stream.rs
blte/tests/: README.md  integration_tests.rs  memory_pool_performance.rs
casc-storage/: Cargo.toml  README.md
casc-storage/examples/: README.md  list_casc_files.rs  progressive_loading.rs  progressive_loading_demo.rs  texture_streaming.rs
casc-storage/examples.disabled/: async_index_example.rs  progressive_loading.rs
casc-storage/src/: config.rs  error.rs  lib.rs  progressive.rs  types.rs
casc-storage/tests/: README.md  binary_search_test.rs  large_archive_test.rs  lazy_loading_tests.rs  lockfree_cache_test.rs  parallel_loading.rs  progressive_loading_test.rs  real_data_integration.rs  real_data_test.rs  tact_manifest_tests.rs  test_progressive_integration.rs  zero_copy_test.rs
crates/cascette-cache/: Cargo.toml  README.md
crates/cascette-client-storage/: Cargo.toml  README.md
crates/cascette-crypto/: Cargo.toml  README.md
crates/cascette-formats/: Cargo.toml  README.md
crates/cascette-protocol/: Cargo.toml  README.md
crates/cascette-ribbit/: Cargo.toml  README.md
ngdp-bpsv/: CHANGELOG.md  Cargo.toml  README.md
ngdp-bpsv/benches/: bpsv_benchmark.rs
ngdp-bpsv/examples/: README.md  build_bpsv.rs  parse_basic.rs  typed_access.rs
ngdp-bpsv/src/: builder.rs  document.rs  error.rs  field_type.rs  interned_document.rs  interner.rs  lib.rs  parser.rs  schema.rs  value.rs
ngdp-bpsv/tests/: README.md  integration_test.rs  string_interning_test.rs
ngdp-cache/: CHANGELOG.md  Cargo.toml  README.md
ngdp-cache/benches/: cache_benchmark.rs
ngdp-cache/examples/: 01_basic_cache_types.rs  README.md  cache_basic_usage.rs  cached_cdn_client.rs  cached_request_example.rs  cached_ribbit_client.rs  cached_tact_client.rs  cdn_cache_structure.rs  cdn_helper_methods.rs  cdn_path_example.rs  drop_in_replacement.rs  full_ngdp_pipeline.rs  ribbit_cdn_download.rs  streaming_demo.rs  test_cache_validity.rs  verify_cache_structure.rs
ngdp-cache/src/: cache.rs  cached_cdn_client.rs  cached_ribbit_client.rs  cached_tact_client.rs  cdn.rs  error.rs  filesystem_cache.rs  generic.rs  hybrid_version_client.rs  lib.rs  ribbit.rs  stats.rs  tact.rs
ngdp-cache/tests/: README.md  cache_validity_test.rs  cached_cdn_client_integration.rs  cached_cdn_helper_tests.rs  cached_ribbit_client_test.rs  cached_tact_client_integration.rs  cached_tact_client_test.rs  integration_test.rs  ribbit_cache_structure_test.rs  ribbit_cdn_integration.rs
ngdp-cdn/: CHANGELOG.md  Cargo.toml  README.md
ngdp-cdn/benches/: cdn_benchmark.rs
ngdp-cdn/examples/: README.md  basic_usage.rs  fallback_usage.rs  http2_batching.rs  parallel_download.rs
ngdp-cdn/src/: backoff.rs  cache.rs  client.rs  client_test.rs  error.rs  fallback.rs  hosts.rs  lib.rs  traits.rs
ngdp-cdn/tests/: README.md  connection_pooling_test.rs  fallback_tests.rs  integration_test.rs  integration_test.rs.txt  request_batching_test.rs
ngdp-client/: CHANGELOG.md  Cargo.toml  README.md
ngdp-client/examples/: README.md  cached_certificate_fetch.rs  cdns_region_demo.rs  certificate_operations.rs  download_certificate.rs  fallback_demo.rs  products_info_demo.rs  products_operations.rs  query_products.rs  wago_builds.rs
ngdp-client/src/: cached_client.rs  cdn_config.rs  config_manager.rs  fallback_client.rs  lib.rs  listfile.rs  main.rs  manifest.rs  output.rs  pattern_extraction.rs  wago_api.rs
ngdp-client/tests/: README.md  builds_test.rs  certs_test.rs  cli_test.rs  fallback_test.rs
ngdp-crypto/: CHANGELOG.md  Cargo.toml  README.md
ngdp-crypto/examples/: README.md
ngdp-crypto/src/: arc4.rs  error.rs  key_service.rs  keys.rs  lib.rs  salsa20.rs
ngdp-crypto/tests/: README.md
ngdp-patch/: Cargo.toml  README.md
ngdp-patch/src/: error.rs  lib.rs  patch_entry.rs  patch_file.rs  zbsdiff.rs
ribbit-client/: CHANGELOG.md  Cargo.toml  README.md
ribbit-client/benches/: client_benchmark.rs
ribbit-client/examples/: README.md  analyze_bpsv_types.rs  basic_usage.rs  cdn_consistency.rs  check_ocsp_endpoint.rs  check_ski_response.rs  compare_v1_v2_formats.rs  complete_pki_workflow.rs  complete_signature_verification.rs  debug_bpsv_format.rs  debug_cert_checksum.rs  debug_mime.rs  debug_signature_data.rs  debug_signed_attributes.rs  decode_ocsp_response.rs  explore_tact_endpoints.rs  fetch_certificate_by_ski.rs  full_signature_verification.rs  mime_parsing.rs  parse_ocsp_response.rs  parse_versions.rs  public_key_extraction.rs  raw_debug.rs  raw_vs_typed.rs  retry_handling.rs  ribbit_basic_usage.rs  signature_parsing.rs  signature_verification.rs  simple_typed_usage.rs  test_signature_verification.rs  timeout_handling.rs  trace_debug.rs  typed_api_showcase.rs  verify_ski_certificate.rs  wow_products.rs
ribbit-client/src/: certificate_fetcher.rs  client.rs  cms_parser.rs  dns_cache.rs  error.rs  lib.rs  response_types.rs  signature.rs  signature_verify.rs  types.rs
ribbit-client/tests/: README.md  cdn_servers_test.rs  cms_parser_test.rs  integration_test.rs  typed_responses_test.rs
tact-client/: CHANGELOG.md  Cargo.toml  README.md
tact-client/benches/: response_parsing.rs
tact-client/examples/: README.md  basic_usage.rs  compare_cdn_formats.rs  (+8 more)
tact-parser/: CHANGELOG.md  Cargo.toml  README.md
test-utils/: Cargo.toml  README.md
(+465 files in other folders)
