[workspace]
resolver = "2"
members = [
    "crates/cascette-cache",
    "crates/cascette-crypto",
    "crates/cascette-formats",
]

[workspace.package]
version = "0.1.0"
authors = ["Daniel S. Reichenbach <daniel@kogito.network>"]
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wowemulation-dev/cascette-rs"
homepage = "https://github.com/wowemulation-dev/cascette-rs"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Binary format handling
binrw = "0.15"

# Utilities
hex = "0.4"
md5 = "0.7"
rand = "0.9"
bytes = "1.10"
dashmap = "6.1"

# Compression
flate2 = "1.1"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability (optional)
prometheus = "0.13"
tracing = "0.1"

# Testing
pretty_assertions = "1.4"
tempfile = "3.24"
proptest = "1.9"
criterion = { version = "0.8", features = ["html_reports"] }
walkdir = "2.5"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
# Lint groups at low priority
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Safety lints
unwrap_used = { level = "warn", priority = 2 }
panic = { level = "warn", priority = 2 }
todo = { level = "warn", priority = 2 }
unimplemented = { level = "warn", priority = 2 }
expect_used = { level = "warn", priority = 2 }

# Specific allows at higher priority to override group lints
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
