[workspace]
resolver = "2"
members = [
    "crates/cascette-cache",
    "crates/cascette-crypto",
    "crates/cascette-formats",
    "crates/cascette-protocol",
]

[workspace.package]
version = "0.2.0"
authors = ["Daniel S. Reichenbach <daniel@kogito.network>"]
edition = "2024"
rust-version = "1.92.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wowemulation-dev/cascette-rs"
homepage = "https://github.com/wowemulation-dev/cascette-rs"

[workspace.dependencies]
# Error handling
thiserror = "2.0"

# Binary format handling
binrw = "0.15"

# Utilities
hex = "0.4"
md5 = "0.8"
rand = "0.9"
bytes = "1.11"
dashmap = "6.1"
getrandom = "0.4"

# Compression
flate2 = "1.1"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls-no-provider", "gzip", "brotli", "deflate", "http2", "charset"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
url = "2.5"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
digest = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22"

# MIME/Certificate parsing (for V1 protocol support)
mail-parser = "0.11"
cms = "0.2"
der = "0.7"
asn1 = "0.23"
x509-cert = "0.2"

# Observability (optional)
prometheus = { version = "0.14", default-features = false }  # Disable push gateway to avoid protobuf vulnerability
tracing = "0.1"

# Testing
pretty_assertions = "1.4"
tempfile = "3.24"
proptest = "1.10"
criterion = { version = "0.8", features = ["html_reports"] }
walkdir = "2.5"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
# Lint groups at low priority
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Safety lints
unwrap_used = { level = "warn", priority = 2 }
panic = { level = "warn", priority = 2 }
todo = { level = "warn", priority = 2 }
unimplemented = { level = "warn", priority = 2 }
expect_used = { level = "warn", priority = 2 }

# Specific allows at higher priority to override group lints
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
