[package]
name = "blte"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
flate2 = "1.1"
lz4_flex = "0.11.5"
ngdp-crypto = { path = "../ngdp-crypto" }
md5 = "0.8"
tracing.workspace = true
thiserror.workspace = true
byteorder.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
