[package]
name = "blte"
description = "BLTE (Block Table Encoded) compression/decompression for World of Warcraft CASC files"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
flate2 = "1.1"
lz4_flex = "0.11.5"
ngdp-crypto = { path = "../ngdp-crypto", version = "0.4.1" }
md5 = "0.8"
tracing.workspace = true
thiserror.workspace = true
byteorder.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
ureq = "2.10"

[[example]]
name = "real_blte_roundtrip"
