[package]
name = "casc-storage"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Reichenbach <daniel@reichenbach.digital>"]
description = "CASC (Content Addressable Storage Container) implementation for local game file storage"
license = "Apache-2.0"
repository = "https://github.com/wowemulation-dev/cascette-rs"
keywords = ["casc", "blizzard", "storage", "ngdp", "wow"]
categories = ["filesystem", "game-development"]

[dependencies]
# Core dependencies
thiserror = "2"
tracing = "0.1"
bytes = "1"
byteorder = "1"

# File handling
memmap2 = "0.9"

# Data structures
dashmap = "6"
lru = "0.12"
parking_lot = "0.12"

# Hashing
md5 = "0.7"
sha1 = "0.10"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde_json = "1"

# Internal dependencies
blte = { path = "../blte", version = "0.3" }
tact-parser = { path = "../tact-parser", version = "0.3" }

# Optional performance optimizations
rayon = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
hex = "0.4"
pretty_assertions = "1"

[features]
default = []
parallel = ["rayon"]

# Benchmarks can be added later
# [[bench]]
# name = "index_lookup"
# harness = false
# 
# [[bench]]
# name = "archive_read"
# harness = false