[package]
name = "ngdp-bpsv"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "BPSV (Blizzard Pipe-Separated Values) parser and writer for NGDP"
keywords = ["blizzard", "ngdp", "tact", "parsing", "bpsv"]
categories = ["parsing", "data-structures"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
dashmap = "6.1"

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0.142"
criterion.workspace = true

[[example]]
name = "parse_basic"
path = "examples/parse_basic.rs"

[[example]]
name = "build_bpsv"
path = "examples/build_bpsv.rs"

[[example]]
name = "typed_access"
path = "examples/typed_access.rs"

[[bench]]
name = "bpsv_benchmark"
harness = false
