[package]
name = "ngdp-cache"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Generic caching functionality for NGDP components"
keywords = ["ngdp", "cache", "blizzard", "tact", "cdn"]
categories = ["caching", "filesystem", "games"]

[dependencies]
bytes = "1.8"
dirs = { workspace = true }
futures = "0.3"
ngdp-cdn = { path = "../ngdp-cdn", version = "0.1.1" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ribbit-client = { path = "../ribbit-client", version = "0.1.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tact-client = { path = "../tact-client", version = "0.1.1" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
criterion = { workspace = true }
rand = "0.9"
tempfile = "3.5"
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
wiremock = "0.6"

[[bench]]
name = "cache_benchmark"
harness = false
