[package]
name = "ngdp-cache"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transparent caching layer with TTL support for all NGDP operations"
keywords = ["ngdp", "cache", "blizzard", "tact", "cdn"]
categories = ["caching", "filesystem", "games"]

[dependencies]
bytes = "1.10.1"
dirs = { workspace = true }
futures = "0.3.31"
ngdp-cdn = { path = "../ngdp-cdn", version = "0.4.0" }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }
ribbit-client = { path = "../ribbit-client", version = "0.4.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.142"
tact-client = { path = "../tact-client", version = "0.4.0" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
walkdir = "2.5.0"
parking_lot = "0.12"

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"
serial_test = "3.1"
tempfile = "3.20"
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
wiremock = "0.6.4"

[[bench]]
name = "cache_benchmark"
harness = false
