[package]
name = "ngdp-cdn"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CDN client for NGDP content delivery"
keywords = ["ngdp", "cdn", "blizzard", "wow", "http"]
categories = ["network-programming", "game-development", "web-programming::http-client"]

[dependencies]
rand.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "stream", "gzip", "deflate"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures-util = "0.3.31"
parking_lot = "0.12.4"

[dev-dependencies]
criterion.workspace = true
tracing-subscriber.workspace = true
tokio-test = "0.4.4"
wiremock = "0.6.4"

[[bench]]
name = "cdn_benchmark"
harness = false
