[package]
name = "ngdp-client"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NGDP client CLI for Cascette"
keywords = ["ngdp", "cli", "blizzard", "wow", "casc"]
categories = ["command-line-utilities", "game-development"]

[lib]
name = "ngdp_client"
path = "src/lib.rs"

[[bin]]
name = "ngdp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
comfy-table = "7.1.1"
hex.workspace = true
owo-colors = { version = "4.2.1", features = ["supports-colors"] }
ribbit-client = { path = "../ribbit-client", version = "0.1.2" }
tact-client = { path = "../tact-client", version = "0.1.2" }
tact-parser = { path = "../tact-parser", version = "0.1.0" }
ngdp-bpsv = { path = "../ngdp-bpsv", version = "0.1.2" }
ngdp-cache = { path = "../ngdp-cache", version = "0.1.3" }
ngdp-cdn = { path = "../ngdp-cdn", version = "0.2.1" }
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
dirs.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
x509-cert = "0.2"
der = "0.7"
chrono = { version = "0.4", features = ["serde"] }
octorust = { version = "0.10.0", features = ["httpcache"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.17"
tracing-subscriber.workspace = true
