[package]
name = "ngdp-client"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for Blizzard's NGDP with product queries, certificate management, and key operations"
keywords = ["ngdp", "cli", "blizzard", "wow", "casc"]
categories = ["command-line-utilities", "game-development"]

[lib]
name = "ngdp_client"
path = "src/lib.rs"

[[bin]]
name = "ngdp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
comfy-table = "7.1.4"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
ribbit-client = { path = "../ribbit-client", version = "0.3.1" }
tact-client = { path = "../tact-client", version = "0.3.1" }
ngdp-bpsv = { path = "../ngdp-bpsv", version = "0.3.1" }
ngdp-cache = { path = "../ngdp-cache", version = "0.3.1" }
ngdp-cdn = { path = "../ngdp-cdn", version = "0.3.1" }
tact-parser = { path = "../tact-parser", version = "0.3.1" }
blte = { path = "../blte", version = "0.3.1" }
ngdp-crypto = { path = "../ngdp-crypto", version = "0.3.1" }
casc-storage = { path = "../casc-storage", version = "0.1.0" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20"
toml.workspace = true
dirs.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22.1"
x509-cert = "0.2"
der = "0.7"
chrono = { version = "0.4.41", features = ["serde"] }
hex.workspace = true
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20"
tracing-subscriber.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/ngdp-client-v{ version }/ngdp-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey_source = "file:minisign.pub"
