[package]
name = "ngdp-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Encryption and decryption support for NGDP/TACT files"

[dependencies]
salsa20 = "0.11.0-rc.0"
cipher = "0.5.0-rc.0"
rc4 = "0.1"
generic-array = "1.2"
hex.workspace = true
dirs.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.20"
