[package]
name = "ngdp-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Salsa20 and ARC4 encryption/decryption with key management for Blizzard's TACT files"

[dependencies]
salsa20 = "0.10.2"
cipher = { version = "0.4.3", features = ["std"] }
rc4 = "0.1"
generic-array = "1.2"
hex.workspace = true
dirs.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.20"
