[package]
name = "ngdp-patch"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NGDP patch system for incremental game updates using ZBSDIFF"
keywords = ["ngdp", "patch", "zbsdiff", "blizzard", "wow"]
categories = ["game-development", "compression"]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }
bytes = "1.9"
flate2 = "1.0"
md5 = "0.7"
nom = "7.1"
lru = "0.12"

# Internal dependencies
blte = { path = "../blte" }
