[package]
name = "ribbit-client"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ribbit protocol client for Cascette"
keywords = ["ngdp", "ribbit", "blizzard", "wow", "tcp"]
categories = [
  "network-programming",
  "game-development",
  "parser-implementations",
]

[dependencies]
asn1 = "0.21"
base64 = "0.22"
cms = "0.2"
der = "0.7"
digest = "0.10"
dirs.workspace = true
hex = "0.4"
mail-parser = "0.11"
ngdp-bpsv = { path = "../ngdp-bpsv", version = "0.1.2" }
rand.workspace = true
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
x509-cert = "0.2"

[dev-dependencies]
criterion.workspace = true
tokio-test = "0.4"
tracing-subscriber.workspace = true
regex = "1.11"

[[bench]]
name = "client_benchmark"
harness = false
