[package]
name = "tact-client"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TACT (Trusted Application Content Transfer) HTTP client for Blizzard's NGDP"
keywords = ["ngdp", "tact", "blizzard", "wow", "http"]
categories = [
  "network-programming",
  "game-development",
  "web-programming::http-client",
]

[dependencies]
ngdp-bpsv = { path = "../ngdp-bpsv", version = "0.3.1" }
rand.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json", "stream"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tracing-subscriber.workspace = true

[[bench]]
name = "response_parsing"
harness = false
