[package]
name = "tact-client"
version = "0.4.3"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TACT (Trusted Application Content Transfer) HTTP client for Blizzard's NGDP"
keywords = ["ngdp", "tact", "blizzard", "wow", "http"]
categories = [
  "network-programming",
  "game-development",
  "web-programming::http-client",
]

[dependencies]
futures-util = "0.3.31"
ngdp-bpsv = { path = "../ngdp-bpsv", version = "0.4.3" }
rand.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.142"
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "fs"] }
tracing.workspace = true
url = "2.5.4"

[dev-dependencies]
criterion.workspace = true
futures-util = "0.3.31"
tempfile = "3.20"
tracing-subscriber.workspace = true

[[bench]]
name = "response_parsing"
harness = false
