[package]
name = "tact-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-compression = { version = "0.4.27", features = ["zlib", "tokio"] }
flate2 = "1.1.2"
hex.workspace = true
md-5 = "0.10.6"
modular-bitfield.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
criterion.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "fs"] }

[[bench]]
name = "jenkins3"
harness = false
