[package]
name = "tact-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
byteorder.workspace = true
modular-bitfield.workspace = true
thiserror.workspace = true
tracing.workspace = true
blte = { path = "../blte" }
ngdp-crypto = { path = "../ngdp-crypto" }
md5 = "0.8"

[dev-dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
criterion.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }
ribbit-client = { path = "../ribbit-client" }
ngdp-bpsv = { path = "../ngdp-bpsv" }

[[bench]]
name = "jenkins3"
harness = false
