[package]
name = "tact-parser"
description = "Parser for TACT (Trusted Application Content Transfer) files used in Blizzard's NGDP distribution system"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
byteorder.workspace = true
modular-bitfield.workspace = true
thiserror.workspace = true
tracing.workspace = true
blte = { path = "../blte", version = "0.4.3" }
ngdp-crypto = { path = "../ngdp-crypto", version = "0.4.3" }
md5 = "0.8"
hex.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
criterion.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }
ribbit-client = { path = "../ribbit-client", version = "0.4.3" }
ngdp-bpsv = { path = "../ngdp-bpsv", version = "0.4.3" }

[[bench]]
name = "jenkins3"
harness = false
