[package]
name = "test-utils"
version = "0.4.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test utilities for cascette-rs - WoW data discovery and test helpers"
publish = false

[dependencies]
shellexpand = "3.1"
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }